[package]
name = "inigo-async-graphql"
version = "0.1.0"
edition = "2021"


[dependencies]
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
starwars = { path = "starwars" }
hyper = "0.14"
axum = { version = "0.6.0", features = ["headers"] }
tower = "0.4.13"
futures-util = "0.3.29"
